worksheet theme: fix spacing and width of the generator

--- a/themes/default/files/resources/_variables.css
+++ b/themes/default/files/resources/_variables.css
@@ -10,7 +10,7 @@
 
         font-size: var(--scaled-text-size);
 
-        --line-height: 1.5em;
+        --line-height: 1.5;
 
         --border-width: thin;
 
